Migrate most of the code from the previous project

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,1 +1,6 @@
 /* This file is for your main application css. */
+body { margin-top: 0; }
+
+.front-page .cognitools { margin-bottom: 2em}
+.front-page .cognitools ul { margin: 0.5em 0}
+.front-page .cognitools a { text-transform: uppercase; letter-spacing: 0.04em;}
