--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -31,6 +31,12 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :is_published, class: "control-label" %>
+    <%= checkbox f, :is_published, class: "form-control" %>
+    <%= error_tag f, :is_published %>
+  </div>
+
+  <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
