Update front page text

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -10,15 +10,19 @@
 
         <div class="cognitools block">
         <h2>Cognitools</h2>
-        <em>Tools for computer assisted thinking and learning. </em>
+        <em>Tools and prototypes for computer assisted thinking and learning. </em>
 
             <ul class="list-unstyled">
                 <li><%= link "Socrateaser", to: static_path(@conn, "/apps/socrateaser/index.html") %>
                     &mdash; Guided generic problem solving
                 </li>
+                <li><%= link "Synapticle", to: static_path(@conn, "/apps/synapticle/index.html") %>
+                    &mdash; Tickle your brain with information, reinforce your memory, collide ideas.
+                </li>
                 <li><%= link "Numbervision", to: "https://play.google.com/store/apps/details?id=com.anywheris.numbervision" %>
                     &mdash; Trainer for visual acuity and working memory
                 </li>
+
             </ul>
         </div>
 
@@ -33,9 +37,10 @@
 
       </div>
       <div class="col-md-4 other-sites">
-        <h2>My sites</h2>
+        <h2>Sites</h2>
         <ul class="list-unstyled">
-          <li><img src="<%= static_path(@conn, "/images/center_black1_fb.jpg") %>" /><h3>Mind on Maps</h3><a href="http://mindonmaps.com"></a><em>Expand your memory, index your mind, organize your life. </em>Blog about computer assisted thinking (with mind maps).</li>
+          <li><img src="<%= static_path(@conn, "/images/center_black1_fb.jpg") %>" /><h3>Mind on Maps</h3>
+            <a href="http://mindonmaps.com"></a><em>Expand your memory, index your mind, organize your life. </em>My upcoming book about computer assisted thinking (with mind maps).</li>
           <li><img src="<%= static_path(@conn, "/images/antti-mirje-innsbruck-340x200.jpg") %>" /><h3>Anywhereism</h3><em>A journey as digital nomads. </em>Me and my wife have been living out of our backpacks since January 2013.<a href="http://www.anywhereism.net"></a></li>
           <li><img src="<%= static_path(@conn, "/images/anywheris_logo.png") %>" /><h3>Anywheris</h3><a href="http://www.anywheris.com"></a>Our company. I'm available for short-term, part-time, remote contract work. </li>
         </ul>
