--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -37,7 +37,7 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Save", class: "btn btn-primary" %>
   </div>
 <% end %>
 </div>
