--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -8,7 +8,7 @@
         <meta name="author" content="Antti Halla">
 
 
-        <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500" rel="stylesheet">
         <link rel="stylesheet" href="<%= static_path(@conn, "/vendor/fa/css/font-awesome.min.css") %>"/>
         <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>"/>
 
@@ -47,9 +47,9 @@
                  <div class="col-md-6">
                    <nav role="navigation">
                     <ul class="nav nav-pills pull-right">
-                      <li><%= link "Home", to: page_path(@conn, :index) %></li>
-                      <li><%= link "Projects", to: page_path(@conn, :projects) %></li>
-                      <li><%= link "Blog", to: page_path(@conn, :blog) %></li>
+                      <li><%= link "Home", to: page_path(@conn, :index), class: active_class(@conn, page_path(@conn, :index)) %></li>
+                      <li><%= link "Projects", to: page_path(@conn, :projects), class: active_class(@conn, page_path(@conn, :projects)) %></li>
+                      <li><%= link "Blog", to: page_path(@conn, :blog), class: active_class(@conn, page_path(@conn, :blog)) %></li>
                       <%= if @current_user do %>
                         <li><%= link "Log out", to: session_path(@conn, :delete, @current_user), method: "delete" %></li>
                       <%= end %>
