Front page, coaching update, coworking camp

--- a/web/templates/page/coaching.html.eex
+++ b/web/templates/page/coaching.html.eex
@@ -5,8 +5,23 @@
 
   <p>Besides my software work, I'm also a certified coach. At the moment I'm in process of getting certified at the <em>Master</em> level.</p>
   <br>
+
   <p>Would you like to get a personal coach to help you sort out your thoughts and work through a challenge in your business or personal life?
-  I'm giving out free coaching sessions, on a first come, first save basis. Get in touch, if interested!</p>
+  </p>
+  <br>
+  I'm giving out free introductory coaching sessions, on a first come, first save basis.
+  The session takes about one hour. I'll guide you through a structured thought process, mostly by using questions. You'll
+  map out your current situation, then choose a topic to work on and set an objective for it.
+  You'll brainstorm solutions on how to get there and close with specific action steps you choose to take towards your objective.
+</p>
+<br><p>Coaching is all about personal change. It's about clarifying your thougts and direction in a methodic way.
+It's about developing the mental skill and flexibility to solve any problem that the life throws at you.
+</p>
+<br>
+<p>Coaching is about taking action.</p>
+</p>
+  <br>
+  <p>Get in touch, if interested!</p>
   </div>
 </div>
 </div>
