--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -6,8 +6,15 @@
         </div>
 
         <div class="intro col-md-9">
-          <p>I'm <strong>Antti</strong>, a programmer and a software engineer, methodically exploring and experimenting as I go, while
-          living a nomadic life.</p>
+          <p>I'm <strong>Antti</strong>, a freelance software engineer from Finland,
+            methodically exploring and experimenting as I go,
+            living a nomadic life.
+          </p>
+          <p>
+            I'm passionate about programming and personal development.
+            At the moment I'm likely working with my mind maps or
+            building software prototypes for thinking and learning.
+          </p>
           <p>The web is my platform.</p> <p>
          I've been experimenting with a range of technologies to create software for the web. Besides helping me think and learn &mdash; and paying my bills &mdash; it enabled me to explore the world.
        </p>
