--- a/web/templates/page/coaching.html.eex
+++ b/web/templates/page/coaching.html.eex
@@ -14,7 +14,7 @@
   map out your current situation, then choose a topic to work on and set an objective for it.
   You'll brainstorm solutions on how to get there and close with specific action steps you choose to take towards your objective.
 </p>
-<br><p>Coaching is all about personal change. It's about clarifying your thougts and direction in a methodic way.
+<br><p>Coaching is all about personal change. It's about clarifying your thoughts and direction in a methodic way.
 It's about developing the mental skill and flexibility to solve any problem that the life throws at you.
 </p>
 <br>
