--- a/web/templates/page/coaching.html.eex
+++ b/web/templates/page/coaching.html.eex
@@ -3,16 +3,21 @@
     <div class="col-md-8">
   <h1>Coaching</h1>
 
-  <p>Besides my software work, I'm also a certified coach. At the moment I'm in process of getting certified at the <em>Master</em> level.</p>
-  <br>
-
-  <p>Would you like to get a personal coach to help you sort out your thoughts and work through a challenge in your business or personal life?
+  <p>Would you too like some help in navigating your thoughts? Maybe you've got a specific goal you want to reach but are not
+    getting yourself to action? Maybe you're working through a challenge in your business or personal life that seems to pull you
+    in two opposite directions?
   </p>
+  <p></p>
   <br>
-  I'm giving out free introductory coaching sessions, on a first come, first save basis.
-  The session takes about one hour. I'll guide you through a structured thought process, mostly by using questions. You'll
-  map out your current situation, then choose a topic to work on and set an objective for it.
-  You'll brainstorm solutions on how to get there and close with specific action steps you choose to take towards your objective.
+  <p>Besides my software work, I'm also a certified coach. At the moment I'm in process of getting certified at the <em>Master</em> level.</p>
+
+  <br>
+  Whether you're new to coaching or looking for a coach but not sure who's the right one, I'll make it easy for you.
+  I'm giving out free introductory coaching sessions, on a first come, first serve basis.
+  The session takes about one hour and happens online. I'll guide you through a structured thought process, mostly by using questions.
+</p></p><br>You'll
+  map out your present <em>reality</em>, then choose a topic to work on and set an <em>objective</em> for it.
+  You'll brainstorm <em>solutions</em> on how to get there and close with specific <em>action steps</em> you choose to take towards your objective.
 </p>
 <br><p>Coaching is all about personal change. It's about clarifying your thoughts and direction in a methodic way.
 It's about developing the mental skill and flexibility to solve any problem that the life throws at you.
