--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -13,7 +13,7 @@
           <p>
             I'm passionate about programming and personal development.
             At the moment I'm likely working with my mind maps or
-            building software prototypes for thinking and learning.
+            building software tools for thinking and learning.
           </p>
           <p>The web is my platform.</p> <p>
          I've been experimenting with a range of technologies to create software for the web. Besides helping me think and learn &mdash; and paying my bills &mdash; it enabled me to explore the world.
