Update project, coaching pages

--- a/web/templates/page/coaching.html.eex
+++ b/web/templates/page/coaching.html.eex
@@ -12,9 +12,7 @@
   <p>Besides my software work, I'm also a certified coach. At the moment I'm in process of getting certified at the <em>Master</em> level.</p>
 
   <br>
-  Whether you're new to coaching or looking for a coach but not sure who's the right one, I'll make it easy for you.
-  I'm giving out free introductory coaching sessions, on a first come, first serve basis.
-  The session takes about one hour and happens online. I'll guide you through a structured thought process, mostly by using questions.
+  My sessions take around one hour, mainly online. I'll guide you through a structured thought process, mostly by using questions.
 </p></p><br>You'll
   map out your present <em>reality</em>, then choose a topic to work on and set an <em>objective</em> for it.
   You'll brainstorm <em>solutions</em> on how to get there and close with specific <em>action steps</em> you choose to take towards your objective.
@@ -22,11 +20,15 @@
 <br><p>Coaching is all about personal change. It's about clarifying your thoughts and direction in a methodic way.
 It's about developing the mental skill and flexibility to solve any problem that the life throws at you.
 </p>
+
 <br>
 <p>Coaching is about taking action.</p>
 </p>
   <br>
   <p>Get in touch, if interested!</p>
+<br>
+<blockquote><p>If you want to get on overview of my way of thinking, check out my book <em>Mind on maps: Navigate your thoughts methodically with digital mind maps</em> <a href="https://www.amazon.com/dp/B06X9Q3NBB">(Amazon)</a>.</p>
+</blockquote>
   </div>
 </div>
 </div>
