--- a/web/templates/page/projects.html.eex
+++ b/web/templates/page/projects.html.eex
@@ -6,10 +6,10 @@
       </div>
       <div class="col-md-8">
         <h2>Mind on Maps</h2>
-        <a href="http://mindonmaps.com"></a><em class="tagline">Navigate your thoughts with mind maps.</em>
+        <a href="http://mindonmaps.com"></a><em class="tagline">Navigate your thoughts methodically with digital mind maps.</em>
         <p>I've been using digital <em>mind maps</em> as my daily go-to cognitive tool for over 10 years now. During those
           years I've moved from a collection of a dozen scattered maps to a connected system spanning hundreds.
-          I'm writing a book about my experience.
+          I'm wrote a book about my experience.
       </div>
     </li>
     <li class="row">
@@ -20,6 +20,7 @@
         <h2>Anywhereism</h2>
         <em class="tagline">A journey as digital nomads. </em>
         Me and my wife have been working 99% online and living out of our backpacks since January 2013. We occasionally write updates about our travels.
+        As of beginning of 2017, we're setting up a base in Finland and slowing down a bit, as we're expecting a new member to the team.
         <a href="http://www.anywhereism.net"></a>
       </div>
     </li>
@@ -32,8 +33,8 @@
         <h2>Anywheris</h2>
         <a href="http://www.anywheris.com"></a>Our company.
         <p>
-          Do you have a software project that would use the help of an experienced full-stack developer in the team? Ideally
-          in the area of learning and education. I'd like to hear from you. I'm available for fixed-term, part-time, remote contract work.
+          Do you have a software project that would use the help of an experienced full-stack developer in the team?
+          I'm available for part-time, remote contract work.
         </p>
       </div>
     </li>
