--- a/web/templates/page/projects.html.eex
+++ b/web/templates/page/projects.html.eex
@@ -8,8 +8,8 @@
         <h2>Mind on Maps</h2>
         <a href="http://mindonmaps.com"></a><em class="tagline">Navigate your thoughts methodically with digital mind maps.</em>
         <p>I've been using digital <em>mind maps</em> as my daily go-to cognitive tool for over 10 years now. During those
-          years I've moved from a collection of a dozen scattered maps to a connected system spanning hundreds.
-          I'm wrote a book about my experience.
+          years I've moved from a collection of a dozen scattered maps to a connected system spanning hundreds of them.
+          I wrote a book about my experience.
       </div>
     </li>
     <li class="row">
