--- a/web/templates/page/projects.html.eex
+++ b/web/templates/page/projects.html.eex
@@ -46,7 +46,11 @@
 
       <ul class="list-unstyled">
           <li><%= link "Socrateaser", to: static_path(@conn, "/apps/socrateaser") %>
-              &mdash; Guided generic problem solving
+              &mdash; Guided thinking using predefined question sets.
+          </li>
+          <li>
+            <%= link "Valuesorter", to: static_path(@conn, "/apps/valuesorter-lite/index.html") %>
+            &mdash; (Bubble) Sort out a list of thoughts. Simple guided sorting algorithm to help in prioritazing things.
           </li>
           <li><%= link "Synapticle", to: static_path(@conn, "/apps/synapticle/index.html") %>
               &mdash; Tickle your brain with information, reinforce your memory, collide ideas.
