Text and package updates

--- a/web/templates/page/projects.html.eex
+++ b/web/templates/page/projects.html.eex
@@ -20,7 +20,7 @@
         <h2>Anywhereism</h2>
         <em class="tagline">A journey as digital nomads. </em>
         Me and my wife have been working 99% online and living out of our backpacks since January 2013. We occasionally write updates about our travels.
-        As of beginning of 2017, we're setting up a base in Finland and slowing down a bit, as we're expecting a new member to the team.
+        As of beginning of 2017, we're setting up a base in Finland and slowing down a bit, welcoming a third member to our family.
         <a href="http://www.anywhereism.net"></a>
       </div>
     </li>
@@ -46,17 +46,17 @@
 
       <ul class="list-unstyled">
           <li><%= link "Socrateaser", to: static_path(@conn, "/socrateaser/") %>
-              &mdash; Guided thinking using predefined question sets.
+              &mdash; Guided thinking using predefined question sets. Avoid context switching and use cognitive off-loading to facilitate repeating thinking tasks.
           </li>
           <li>
             <%= link "Valuesorter", to: static_path(@conn, "/apps/valuesorter-lite/") %>
-            &mdash; (Bubble) Sort out a list of thoughts. Simple guided sorting algorithm to help in prioritizing things.
+            &mdash; (Bubble) Sort out a list of thoughts. Simple, guided sorting algorithm to help in prioritizing things, using pairwise comparisons.
           </li>
           <li><%= link "Synapticle", to: static_path(@conn, "/apps/synapticle/") %>
               &mdash; Tickle your brain with information, reinforce your memory, collide ideas.
           </li>
           <li><%= link "Numbervision", to: "https://play.google.com/store/apps/details?id=com.anywheris.numbervision" %>
-              &mdash; Trainer for visual acuity and working memory
+              &mdash; Trainer for visual acuity and working memory. Android app in Play Store.
           </li>
 
       </ul>
